--- a/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
+++ b/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
@@ -18,6 +18,10 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.5" />
 		<PackageReference Include="Semver" Version="3.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Mono.Cecil" Version="0.11.6" PrivateAssets="build;compile" />
 		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="4.1.3" PrivateAssets="build;compile" />
 		<PackageReference Include="PolySharp" Version="1.15.0">
 			<PrivateAssets>all</PrivateAssets>
@@ -30,7 +34,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\AppUpdaterFramework.Core\AppUpdaterFramework.Core.csproj" />
+		<ProjectReference Include="..\AppUpdaterFramework.Attributes\AppUpdaterFramework.Attributes.csproj" />
 		<ProjectReference Include="..\ExternalUpdater.Core\ExternalUpdater.Core.csproj" />
 	</ItemGroup>
 	
