--- a/src/Updater/ExternalUpdater.App/ExternalUpdater.App.csproj
+++ b/src/Updater/ExternalUpdater.App/ExternalUpdater.App.csproj
@@ -14,8 +14,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="13.0.3-g989307af40" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="13.0.3-g989307af40" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="13.0.5-g3f61908ec7" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="13.0.5-g3f61908ec7" />
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 		<PackageReference Include="Costura.Fody" Version="6.0.0">
 			<PrivateAssets>all</PrivateAssets>
