--- a/src/Updater/AppUpdaterFramework.Manifest/AppUpdaterFramework.Manifest.csproj
+++ b/src/Updater/AppUpdaterFramework.Manifest/AppUpdaterFramework.Manifest.csproj
@@ -11,7 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="13.0.5-g3f61908ec7" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="13.0.9-g8fbf933acf" />
 		<PackageReference Include="System.Text.Json" Version="10.0.2" />
 	</ItemGroup>
 
