--- a/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
+++ b/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
@@ -11,9 +11,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AnakinRaW.CommonUtilities.DownloadManager" Version="13.0.5-g3f61908ec7" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="13.0.5-g3f61908ec7" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="13.0.5-g3f61908ec7" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.DownloadManager" Version="13.0.9-g8fbf933acf" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="13.0.9-g8fbf933acf" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="13.0.9-g8fbf933acf" />
 		<PackageReference Include="Microsoft.Bcl.HashCode" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
