--- a/src/Updater/ExternalUpdater.Core/ExternalUpdater.Core.csproj
+++ b/src/Updater/ExternalUpdater.Core/ExternalUpdater.Core.csproj
@@ -11,7 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="13.0.5-g3f61908ec7" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="13.0.9-g8fbf933acf" />
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 		<PackageReference Include="Semver" Version="3.0.0" />
 		<PackageReference Include="Testably.Abstractions" Version="10.0.0" />
